change title and update content

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>test</title>
+<title>GSWEB</title>
 
 </head>
 <body>
 
 <div>
-<h3>primera pagina web</h3>
+<h3>Pruebas git</h3>
 </div>
 
 </body>
